syntax = "proto3";

package potato;

import "message.proto";

message Trigger {
  uint32 area_id = 1;
  Vector3 position = 2;
  Vector3 offset = 3;
  Vector3 size = 4;
}
