syntax = "proto3";

// contract_id = 0
// rpc_id = 0

package torikime.auth.login;





message Request {
  string user_id = 1;
  string password = 2;
}

message Response {
  bool ok = 1;
  string token = 2;
}

message RequestParcel
{
    Request request = 1;
    uint32 request_id = 2;
}

message ResponseParcel
{
    Response response = 1;
    uint32 request_id = 2;
    bool success = 3;
}
