syntax = "proto3";

package torikime.channel.create;


message Request {
  string message = 1;
}

message Response {
  int64 message_id = 1;
}
